--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@devxhustler/common": "^1.0.5",
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
