--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@devxhustler/common": "^1.0.6",
+    "@devxhustler/common": "^1.0.9",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
+    "draft-js": "^0.11.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/draft-js": "^0.11.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
